--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,34 +1,89 @@
-<h1>Posts</h1>
+<style>
+  #new-post-form-container {
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    z-index: 9999;
+  }
 
-<table>
-  <thead>
-    <tr>
-      <th>title</th>
-      <th>body</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
+  #new-post-form-container #new-post-form {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: #fff;
+    padding: 20px;
+    border-radius: 5px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+  }
+</style>
 
-  <tbody>
-    <% @post.each do |p| %>
+<div id="posts-container">
+  <h1>Posts</h1>
+
+  <table>
+    <thead>
       <tr>
-        <td><%= p.title %></td>
-        <td><%= p.body %></td>
-       <td>
-  <button><%= link_to 'Show', post_path(p) %></button>
-</td>
-<td>
-  <button><%= link_to 'Edit', edit_post_path(p) %></button>
-</td>
-<td>
-  <%= button_to 'Destroy', post_path(p), method: :delete, data: { confirm: 'Are you sure?' } %>
-</td>
-
+        <th>title</th>
+        <th>body</th>
+        <th colspan="3"></th>
       </tr>
-    <% end %>
-  </tbody>
-</table>
+    </thead>
 
-<br>
+    <tbody>
+      <% @posts.each do |post| %>
+        <tr>
+          <td><%= post.title %></td>
+          <td><%= post.body %></td>
+          <td>
+            <button><%= link_to 'Show', post_path(post) %></button>
+          </td>
+          <td>
+            <button id="edit-post-button">Edit</button>
+          </td>
+          <td>
+            <%= button_to 'Destroy', post_path(post), method: :delete, data: { confirm: 'Are you sure?' } %>
+          </td>
+        </tr>
+      <% end %>
+    </tbody>
+  </table>
 
-<%= link_to 'New Friend', new_post_path(p) %>
+  <br>
+
+  <button id="new-post-button">New</button>
+
+  <div id="new-post-form-container">
+    <div id="new-post-form"></div>
+  </div>
+
+</div>
+
+<script>
+  document.getElementById('new-post-button').addEventListener('click', function(event) {
+    event.preventDefault();
+    fetch("<%= j(new_post_path) %>", {
+      method: "GET",
+      headers: {
+        "Content-Type": "text/html"
+      }
+    })
+    .then(response => response.text())
+    .then(data => {
+      document.getElementById('new-post-form').innerHTML = data;
+      document.getElementById('new-post-form-container').style.display = "block";
+    });
+  });
+
+
+
+  document.addEventListener('click', function(event) {
+    if (event.target && event.target.matches('#new-post-form-container')) {
+      document.getElementById('new-post-form-container').style.display = "none";
+    }
+  });
+</script>
