--- a/app/views/authors/index.html.erb
+++ b/app/views/authors/index.html.erb
@@ -19,7 +19,7 @@
         <td><%= author.email %></td>
         <td><%= link_to 'Show Book', author %></td>
         <td><%= link_to 'Edit', edit_author_path(author) %></td>
-        <td><%= link_to 'Destroy', author, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= button_to 'Destroy', author, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
   </tbody>
