--- a/app/views/books/_form.html.erb
+++ b/app/views/books/_form.html.erb
@@ -23,7 +23,7 @@
 
   <div class="field">
     <%= form.label :publish_at %>
-    <%= form.number_field :publish_at %>
+    <%= form.text_field :publish_at %>
   </div>
   <div class="field">
     <%= form.label :author_id %>
